--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+TITLE: Hey there! 🌊
 
 About me:
-- I’m currently working as a Software Engineer for the mobile platform team at [[@BrowserStack][https://github.com/browserstack]]. 🔭
+- I’m currently working as a Software Engineer for the mobile platform team at [[https://github.com/browserstack][@BrowserStack]]. 🔭
 - Living and working in Dublin, Ireland. 🏡
