--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+TITLE: Hi! 🌊
 
 About me:
-- I’m a software engineer currently working with the mobile platform team [[https://github.com/browserstack][@BrowserStack]]. 🔭
+- I’m a software engineer currently working with the mobile infrastructure team [[https://github.com/browserstack][@BrowserStack]]. 🔭
 - Originally from Dublin, Ireland. 🏡
