--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+TITLE: Hi! 🌊
 
 About me:
-- I'm a software engineer currently working with the development team [[https://www.diona.com/][@Diona]]
-- I previously worked on the mobile infrastructure team [[https://github.com/browserstack][@BrowserStack]]. 🔭
+- I'm a software engineer currently working with the development team at [[https://www.diona.com/][Diona]]. 🔭
+- Between 2019 and 2023 I worked at [[https://github.com/browserstack][BrowserStack]] on the mobile infrastructure team.
 - Originally from Dublin, Ireland. 🏡
